# NeoArcade

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: FlappyDe-design.md  NEO-ONE-INSTALL.md  NeoArcade-Games-Roadmap.md
prototype/: flappyde.py  sprite_test.py
scripts/: install_on_neo.sh
src/neoarcade/: __init__.py  app.py  config.py  hub.py
src/neoarcade/batde/: __init__.py  app.py  game.py  render.py
src/neoarcade/bongro/: __init__.py  app.py  game.py  render.py
src/neoarcade/damboc/: __init__.py  app.py  game.py  render.py
src/neoarcade/dexe/: __init__.py  app.py  game.py  render.py  world.py
src/neoarcade/engine/: __init__.py  game.py  world.py
src/neoarcade/input/: __init__.py  profiles.py  vision.py
src/neoarcade/storage/: __init__.py  db.py
src/neoarcade/ui/: render.py  sound.py  sprites.py  widgets.py
tests/: test_batde.py  test_bongro.py  test_damboc.py  test_game.py  test_input.py  test_race_game.py  test_race_world.py  test_storage.py  test_world.py
